Fix: color contrast in cherry host entry

--- a/house_of_refuge/frontend/src/styles/resources.scss
+++ b/house_of_refuge/frontend/src/styles/resources.scss
@@ -108,6 +108,7 @@ a {
 
 .row-cherry {
   background-color: #b76780;
+  color: #fff;
 }
 
 .row-dropped {
